kube/services/foo/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
  labels:
    app: foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foo
  template:
    metadata:
      labels:
        app: foo
    spec:
      serviceAccountName: foo
      containers:
      - name: hello
        image: k3d-local-registry:5555/hello:0.0.1
        imagePullPolicy: Always
