kube/services/foo/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo
  labels:
    app: foo
    service: foo
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: foo
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: foo-external
spec:
  hosts:
  - api.00rg.com
  gateways:
  - istio-ingress/external-gateway
  http:
  - match:
    - uri:
        prefix: /foo/
    rewrite:
      uri: /
    route:
    - destination:
        host: foo
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: foo-internal
spec:
  hosts:
  - api.internal.00rg.com
  gateways:
  - istio-ingress/internal-gateway
  http:
  - match:
    - uri:
        prefix: /foo/
    rewrite:
      uri: /
    route:
    - destination:
        host: foo
